plugins {
    id 'java'
}

group = 'org.example'
version = '1.0-SNAPSHOT'


java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(22))
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation project(':instrumentation')
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}

test {
    useJUnitPlatform()
}

tasks.register('runWithAgents', JavaExec) {

    group = "Application"
    description = "Runs the application with a Java agent"

    setMainClass("org.example.Example")

    classpath = sourceSets.main.runtimeClasspath

    doFirst {
        def lineAgentJar = project(':instrumentation').tasks.lineAgentJar.outputs.files.singleFile
        def branchAgentJar = project(':instrumentation').tasks.branchAgentJar.outputs.files.singleFile
        jvmArgs += [
                '-javaagent:' + lineAgentJar + '=isUnique=true,isRegex=true,org\\/example\\/[^\\/]+',
                '-javaagent:' + branchAgentJar + '=isUnique=false,isRegex=false,org/example/Example,org/example/Example2',
                '--enable-preview'
        ]
    }
}
// -javaagent:=isUnique=true,isRegex=true,^lesson

tasks.register('runWithLineAgent', JavaExec) {

    group = "Application"
    description = "Runs the application with a Java agent"

    setMainClass("org.example.Example")

    classpath = sourceSets.main.runtimeClasspath

    doFirst {
        def lineAgentJar = project(':instrumentation').tasks.lineAgentJar.outputs.files.singleFile
        jvmArgs += [
                '-javaagent:' + lineAgentJar + '=isUnique=true,isRegex=true,org\\/example\\/[^\\/]+',
                '--enable-preview'
        ]
    }
}

tasks.register('runWithBranchAgent', JavaExec) {

    group = "Application"
    description = "Runs the application with a Java agent"

    setMainClass("org.example.Example")

    classpath = sourceSets.main.runtimeClasspath

    doFirst {
        def branchAgentJar = project(':instrumentation').tasks.branchAgentJar.outputs.files.singleFile
        jvmArgs += [
                '-javaagent:' + branchAgentJar + '=isUnique=false,isRegex=false,org/example/Example,org/example/Example2',
                '--enable-preview'
        ]
    }
}